fixed z-index issue

--- a/src/pages/live/styles.css
+++ b/src/pages/live/styles.css
@@ -14,7 +14,7 @@
 }
 
 .music-player-section{
-    z-index: 3;
+    z-index: 5;
 }
 .schedule-continer{
     width: 50vw;
